# ocr-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yaml  main.yml  release.yaml
ocr_service/: __init__.py  auth.py  config.py  extractor.py  fields.py  llm_adapter.py  logger.py  main.py  ollama_adapter.py  openrouter_adapter.py  openrouter_client.py  orchestrator.py  schemas.py  template_generator.py
scripts/: build.ps1  build.sh  run.ps1  run.sh
templates/nl/demo_leverancier_bv/: template.yml
tests/: conftest.py  test_api.py  test_e2e.py  test_extractor.py  test_llm_adapter.py  test_logger.py  test_ollama_adapter.py  test_openrouter_client.py  test_orchestrator.py  test_template_generator.py
tests/fixtures/: demo_supplier_invoice.txt
